<resources>
    <string name="app_name">Trek_App 2.1</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="add">add</string>
    <string name="notif">notif</string>
    <string name="profile">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>